2008-06-30  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (run): Improved cprocedure call speed.

2008-06-28  higepon  <higepon@users.sourceforge.jp>

        * Added (eq-hashtable-copy ht).

        * compiler.scm: removed set-union and set-intersect.


        * compiler.scm (pass3/$call): Changed (%set-union can-frees vars) => (append2 can-frees vars) for perfomance. (thx! koguro)

        * scheme.cpp (Object::cons): comment out source info copy. This made mosh very slow.

        * compiler.scm (pass3/find-free): Removed unnecesary append.

2008-06-26  higepon  <higepon@users.sourceforge.jp>

        * Improved compilaion speed on pass3 phase.

        * freeproc.cpp : Added (make-code-builder), (code-builder-put! cb o),
                               (code-builder-append cb1 cb2) and (code-builder-emit cb).

        * CodeBuilder.h (scheme): Added CodeBuilder object used for more efficient compilation.

2008-06-23  higepon  <higepon@users.sourceforge.jp>

        * library.scm : Added xcons, make-list, list-tabulate, list-copy, list=, split-at, split-at!, not-pair?
                        last-pair, last, circular-list, proper-list?, circular-list? and dotted-list?.

2008-06-20  higepon  <higepon@users.sourceforge.jp>

        * library.scm : Added take, drop, take!, take-right, drop-right
                            , drop-right!, integer?
                            , fifth, sixth, seventh, eighth, ninth and tenth

2008-06-19  higepon  <higepon@users.sourceforge.jp>

        * Pair.h (scheme): Added append(Object l, Object o) for (append ...).

        * compiler.scm (merge-insn): Added (not 'CONSTANT_PUSH) for PUSH_FRAME.

        * VM.cpp (VM::run): Removed APPEND instruction, it is buggy. We use appendEx instead.

2008-06-18  higepon  <higepon@users.sourceforge.jp>

        * main.cpp (main): Added -l option.

        * VM.cpp (VM::storeCallSample): Improved profiler results.

2008-06-17  higepon  <higepon@users.sourceforge.jp>
