@@ -1,7 +1,6 @@
 // Do not edit this file generated by gen-cproc.scm
 const int cProcNum = 144;
 static const Object cProcs[] = {
-     Object::makeCProcedure(pass4FixupLabelsEx),
      Object::makeCProcedure(codeBuilderEmitEx),
      Object::makeCProcedure(codeBuilderAppendDEx),
      Object::makeCProcedure(codeBuilderPut5DEx),
@@ -10,6 +9,7 @@ static const Object cProcs[] = {
      Object::makeCProcedure(codeBuilderPut2DEx),
      Object::makeCProcedure(codeBuilderPut1DEx),
      Object::makeCProcedure(makeCodeBuilderEx),
+     Object::makeCProcedure(pass4FixupLabelsEx),
      Object::makeCProcedure(pass3FindSetsEx),
      Object::makeCProcedure(pass3FindFreeEx),
      Object::makeCProcedure(appendDEx),
@@ -148,7 +148,6 @@ static const Object cProcs[] = {
 };
 #ifdef ENABLE_PROFILER
 static const ucs4char* cProcNames[] = {
-     UC("pass4/fixup-labels"),
      UC("code-builder-emit"),
      UC("code-builder-append!"),
      UC("code-builder-put5!"),
@@ -157,6 +156,7 @@ static const ucs4char* cProcNames[] = {
      UC("code-builder-put2!"),
      UC("code-builder-put1!"),
      UC("make-code-builder"),
+     UC("pass4/fixup-labels"),
      UC("pass3/find-sets"),
      UC("pass3/find-free"),
      UC("append!"),
